--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -79,16 +79,6 @@ header {
   max-width: 400px;
   margin: 0 auto;
 
-  input {
-    display: block;
-    margin-bottom: 5px;
-    width: 100%;
-    padding: 5px 7px;
-    border: 2px solid #ddd;
-    border-radius: 5px;
-    background-color: #fff;
-  }
-
   button {
     width: 100%;
     display: block;
@@ -100,8 +90,19 @@ header {
   }
 }
 
-form {
+form.login,
+form.register {
   h2 {
     text-align: center;
   }
+}
+
+input {
+  display: block;
+  margin-bottom: 5px;
+  width: 100%;
+  padding: 5px 7px;
+  border: 2px solid #ddd;
+  border-radius: 5px;
+  background-color: #fff;
 }
