--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -31,7 +31,7 @@ header {
 
   a {
     text-decoration: none;
-    color: inherit;
+    color: #333;
   }
 
   .logo {
@@ -50,7 +50,12 @@ header {
   grid-template-columns: 0.9fr 1.1fr;
   gap: 20px;
   margin-bottom: 30px;
-
+  .text {
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+  }
   .text h2 {
     margin: 0;
     font-size: 1.8rem;
@@ -66,6 +71,7 @@ header {
 
     .autor {
       color: #333;
+      padding-bottom: 10px;
     }
   }
   .summary {
@@ -105,4 +111,16 @@ input {
   border: 2px solid #ddd;
   border-radius: 5px;
   background-color: #fff;
+}
+
+.post-page {
+  .image {
+    max-height: 200px;
+    display: flex;
+    overflow: hidden;
+    img {
+      object-fit: cover;
+      object-position: center center;
+    }
+  }
 }
