--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -47,7 +47,7 @@ header {
 
 .post {
   display: grid;
-  grid-template-columns: 0.9fr 1.1fr;
+  grid-template-columns: 1fr;
   gap: 20px;
   margin-bottom: 30px;
   .text {
@@ -77,6 +77,12 @@ header {
   .summary {
     margin: 10px 0;
     line-height: 1.5rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .post {
+    grid-template-columns: 0.9fr 1.1fr;
   }
 }
 
@@ -122,5 +128,36 @@ input {
       object-fit: cover;
       object-position: center center;
     }
+  }
+
+  time {
+    font-size: 0.8rem;
+    color: #aaa;
+  }
+  .author {
+    color: #777;
+    margin-bottom: 10px;
+  }
+  h1 {
+    text-align: center;
+  }
+}
+
+.edit-row {
+  text-align: center;
+  margin-bottom: 20px;
+
+  svg {
+    height: 20px;
+  }
+  .edit-btn {
+    background-color: #333;
+    color: white;
+    padding: 15px 30px;
+    display: inline-flex;
+    align-items: center;
+    gap: 5px;
+    border-radius: 5px;
+    text-decoration: none;
   }
 }
